[gd_scene load_steps=23 format=2]

[ext_resource path="res://Graphics/card_outline.png" type="Texture" id=1]
[ext_resource path="res://Graphics/card_border_color.png" type="Texture" id=2]
[ext_resource path="res://Graphics/CardArt/treasure_chest.png" type="Texture" id=3]
[ext_resource path="res://Font/TitilliumWeb-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Graphics/rarity_fill.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Card.gd" type="Script" id=6]
[ext_resource path="res://Graphics/rarity_ring.png" type="Texture" id=7]
[ext_resource path="res://Graphics/UI/extended_description_button_frames.png" type="Texture" id=8]
[ext_resource path="res://Graphics/extended_card_outline.png" type="Texture" id=9]
[ext_resource path="res://Graphics/extended_card_border_color.png" type="Texture" id=10]
[ext_resource path="res://Audio/extended_desc_open.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/extended_desc_close.wav" type="AudioStream" id=12]
[ext_resource path="res://Graphics/UI/attention_arrow.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0.345098, 0.313726, 0.313726, 1 )
extra_spacing_top = -30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 45
outline_color = Color( 0.345098, 0.313726, 0.313726, 1 )
extra_spacing_top = -30
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Outline:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1040, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Outline:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 458.646, 629.679 )

[sub_resource type="CircleShape2D" id=7]
radius = 100.0

[sub_resource type="DynamicFont" id=8]
size = 50
outline_color = Color( 0.345098, 0.313726, 0.313726, 1 )
extra_spacing_top = -30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_color = Color( 0.345098, 0.313726, 0.313726, 1 )
extra_spacing_top = -30
font_data = ExtResource( 4 )

[node name="Card" type="Area2D"]
script = ExtResource( 6 )

[node name="Outline" type="Sprite" parent="."]
position = Vector2( -1040, 0 )
texture = ExtResource( 1 )

[node name="BorderColor" type="Sprite" parent="Outline"]
texture = ExtResource( 2 )

[node name="CardArt" type="Sprite" parent="Outline"]
show_behind_parent = true
position = Vector2( 0, -250 )
texture = ExtResource( 3 )

[node name="CardName" type="Label" parent="Outline"]
margin_left = -393.413
margin_top = 39.5193
margin_right = 389.587
margin_bottom = 154.519
custom_fonts/font = SubResource( 1 )
text = "A Card"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDescription" type="Label" parent="Outline"]
margin_left = -367.35
margin_top = 171.2
margin_right = 371.65
margin_bottom = 450.2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.721569 )
text = "Gain 2 Tokens"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RarityRing" type="Sprite" parent="Outline"]
position = Vector2( -370, -550 )
texture = ExtResource( 7 )

[node name="RarityFill" type="Sprite" parent="Outline/RarityRing"]
texture = ExtResource( 5 )

[node name="ExtendedDescription" type="Node2D" parent="Outline"]
visible = false

[node name="Outline" type="Sprite" parent="Outline/ExtendedDescription"]
texture = ExtResource( 9 )

[node name="BorderColor" type="Sprite" parent="Outline/ExtendedDescription/Outline"]
texture = ExtResource( 10 )

[node name="CardName" type="Label" parent="Outline/ExtendedDescription/Outline"]
margin_left = -417.0
margin_top = -600.0
margin_right = 418.0
margin_bottom = -508.0
custom_fonts/font = SubResource( 3 )
text = "Card Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="Outline/ExtendedDescription/Outline"]
margin_left = -383.0
margin_top = -488.0
margin_right = 381.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 0.721569 )
text = "This is an extended card description that automatically wraps."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Display"
anims/Display = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="ExtendedDesc" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 750 )

[node name="Sprite" type="Sprite" parent="ExtendedDesc"]
texture = ExtResource( 8 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtendedDesc"]
shape = SubResource( 7 )

[node name="stream_open" type="AudioStreamPlayer2D" parent="ExtendedDesc"]
stream = ExtResource( 11 )

[node name="stream_close" type="AudioStreamPlayer2D" parent="ExtendedDesc"]
stream = ExtResource( 12 )

[node name="Tutorial" type="Node2D" parent="."]
visible = false

[node name="TapCard" type="Sprite" parent="Tutorial"]
position = Vector2( 298, -716 )
rotation = -1.48353
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Tutorial"]
margin_left = -342.0
margin_top = -756.0
margin_right = 260.0
margin_bottom = -659.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 0.721569 )
text = "Double-tap card to proceed 
to the next player's turn!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtDesc" type="Sprite" parent="Tutorial"]
position = Vector2( 179.174, 745.335 )
rotation = -0.349066
texture = ExtResource( 13 )

[node name="Label2" type="Label" parent="Tutorial"]
margin_left = 252.652
margin_top = 704.802
margin_right = 608.652
margin_bottom = 806.802
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 0.721569 )
text = "Tap to toggle
extended card
description!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="ExtendedDesc" to="." method="_on_ExtendedDesc_input_event"]
